[gd_scene load_steps=11 format=3 uid="uid://bo5aw0qh0xy14"]

[ext_resource type="Script" path="res://main.gd" id="1_g6fwn"]
[ext_resource type="PackedScene" uid="uid://bvpiena7irfxu" path="res://player.tscn" id="1_lwgfi"]
[ext_resource type="PackedScene" uid="uid://4ixs0eg14c1p" path="res://mob.tscn" id="2_g3nas"]
[ext_resource type="FontFile" uid="uid://bnyxvn238250v" path="res://fonts/Montserrat-Medium.ttf" id="3_svrb3"]
[ext_resource type="Script" path="res://retry.gd" id="4_0jqbu"]
[ext_resource type="Script" path="res://score_label.gd" id="4_ohdyh"]

[sub_resource type="BoxShape3D" id="BoxShape3D_kh368"]
size = Vector3(60, 2, 60)

[sub_resource type="BoxMesh" id="BoxMesh_a7g5n"]
size = Vector3(60, 2, 60)

[sub_resource type="Curve3D" id="Curve3D_m2o66"]
_data = {
"points": PackedVector3Array(0, 0, 0, 0, 0, 0, 25, 0, 25, 0, 0, 0, 0, 0, 0, 25, 0, -25, 0, 0, 0, 0, 0, 0, -25, 0, -25, 0, 0, 0, 0, 0, 0, -25, 0, 25, 0, 0, 0, 0, 0, 0, 25, 0, 25),
"tilts": PackedFloat32Array(0, 0, 0, 0, 0)
}
point_count = 5

[sub_resource type="Theme" id="Theme_wuf4c"]
default_font = ExtResource("3_svrb3")

[node name="Main" type="Node3D"]
script = ExtResource("1_g6fwn")

[node name="Ground" type="StaticBody3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1, 0)

[node name="CollisionShape3D" type="CollisionShape3D" parent="Ground"]
shape = SubResource("BoxShape3D_kh368")

[node name="MeshInstance3D" type="MeshInstance3D" parent="Ground"]
mesh = SubResource("BoxMesh_a7g5n")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 30, 0)
shadow_enabled = true

[node name="Player" parent="." instance=ExtResource("1_lwgfi")]

[node name="SpawnPath" type="Path3D" parent="."]
curve = SubResource("Curve3D_m2o66")

[node name="SpawnLocation" type="PathFollow3D" parent="SpawnPath"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 25, 0, 25)

[node name="Mobs" type="ResourcePreloader" parent="."]
resources = [PackedStringArray("mob"), [ExtResource("2_g3nas")]]

[node name="MobTimer" type="Timer" parent="."]
wait_time = 0.5
autostart = true

[node name="UserInterface" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ScoreLabel" type="Label" parent="UserInterface"]
layout_mode = 0
offset_right = 100.0
offset_bottom = 50.0
theme = SubResource("Theme_wuf4c")
text = "Score: 0"
horizontal_alignment = 1
vertical_alignment = 1
script = ExtResource("4_ohdyh")

[node name="MiniMap" type="SubViewportContainer" parent="UserInterface"]
layout_mode = 0
offset_top = 50.0
offset_right = 200.0
offset_bottom = 250.0
stretch = true

[node name="View" type="SubViewport" parent="UserInterface/MiniMap"]
handle_input_locally = false
size = Vector2i(200, 200)
render_target_update_mode = 4

[node name="Camera3D" type="Camera3D" parent="UserInterface/MiniMap/View"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 45, 0)

[node name="Retry" type="ColorRect" parent="UserInterface"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)
script = ExtResource("4_0jqbu")

[node name="Label" type="Label" parent="UserInterface/Retry"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
text = "Press Space or Enter to Retry"
